<resources>
    <string name="app_name">Journal App</string>

    <string name="loading_message">Loading…</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="toast_signed_as">Signed as %1$s</string>
    <string name="toast_sign_in_failed">Authentication failed.</string>
    <string name="toast_sign_in_uncatched_error">Oops! something went wrong.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="sign_in_up_with_google">Sign in/up with Google</string>
    <string name="app_terms_disclaimer">by continuing you adhere to our <a href="https://local-guides-directory.firebaseapp.com/terms">terms</a> and <a href="https://local-guides-directory.firebaseapp.com/privacy">privacy policy</a></string>

    <string name="post_edit_date_label">%1$s (%2$s)</string>

    <string name="color_picker_label">Background color</string>

    <!-- preferences -->
    <string name="pref_post_list_view_type_key">post_list_view_type</string>
    <string name="pref_user_cover_key">user_photo_cover</string>

    <string name="post_title_edit_hint">Title</string>
    <string name="post_content_edit_hint">content</string>
    <string name="pref_group_date_label">Time and Date</string>
    <string name="pref_time_format_24h_key">pref_time_format_24h</string>
    <string name="pref_time_format_24h_label">Show time in 24h format</string>
    <string name="settings_activity_label">Settings</string>
    <string name="action_journal">Journal</string>
    <string name="bottom_view_date_label">Date</string>
    <string name="bottom_view_time_label">Time</string>
    <string name="bottom_view_color_label">Color</string>
    <string name="bottom_view_delete_label">Delete</string>
</resources>
